@@ -40,6 +40,12 @@
 
 #include <sys/types.h>
 
+/* CYGNUS LOCAL */
+#ifdef __MSVC__
+#include <NTunixstubs.h>
+#endif
+/* END CYGNUS LOCAL */
+
 /*
  * If your system doesn't typedef u_long, u_short, or u_char, change
  * the 0 to a 1.
